# offworld-bot-client-test

./: .gitignore  FRONTEND_IMPROVEMENTS.md  README.md
server/: ASSIGNMENT.md  Cargo.toml  ECONOMY_REWORK.md  README.md  config.toml  seed.json
server/data/: consumptions.json  factories.json  goods.json
server/docs/: authentication.md  construction.md  galaxy.md  leaderboard.md  market.md  players.md  shipping.md  space-elevator.md  stations.md  trade.md
server/scripts/: balance_check.py  rebalance_factories.py  scale_factories.py
server/src/: api_doc.rs  auth.rs  config.rs  construction_lifecycle.rs  consumer.rs  error.rs  lib.rs  main.rs  market.rs  persistence.rs  pulsar.rs  ship_lifecycle.rs  state.rs  trade_lifecycle.rs  validation.rs
server/src/economy/: config.rs  lifecycle.rs  mod.rs  models.rs  tick.rs
server/src/models/: construction.rs  market.rs  mass_driver.rs  mod.rs  planet.rs  player.rs  settlement.rs  ship.rs  space_elevator.rs  station.rs  system.rs  trade_request.rs  warehouse.rs
server/src/routes/: connections.rs  construction.rs  economy.rs  leaderboard.rs  market.rs  mod.rs  persistence.rs  planets.rs  players.rs  settlements.rs  ships.rs  space_elevator.rs  stations.rs  systems.rs  trade.rs  trucking.rs
server/tests/: api_tests.rs  connection_tests.rs  economy_bench.rs  economy_diagnose.rs  economy_sim_helper.rs  economy_tests.rs  market_tests.rs  player_tests.rs  pulsar_integration_tests.rs  ship_tests.rs  simulations.rs  space_elevator_tests.rs
server/tests/common/: mod.rs
server/tests/simulations/: sim_100_pop.rs  sim_10k_pop.rs  (+1 more)
(+50 files in other folders)
